<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.PhoneNoActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:contentDescription="@string/fast_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/mobile_auth" />

  <TextView
      android:id="@+id/phoneLbl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/enter_your_phone_number_and_email"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageView"
      app:layout_constraintStart_toStartOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:text="@string/otp_will_be_send_on_your_phone_number"
      android:textColor="#1A1A1A"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="@+id/phoneLbl"
      app:layout_constraintStart_toStartOf="@+id/phoneLbl"
      app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/bg"
      app:cardCornerRadius="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

      <EditText
          android:id="@+id/emailBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:background="@drawable/textbox_outline"
          android:ems="10"
          android:hint="@string/type_your_email"
          android:inputType="textEmailAddress"
          android:minHeight="48dp"
          android:padding="10dp"
          android:textColorHint="#757575" />

      <EditText
          android:id="@+id/phoneBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:background="@drawable/textbox_outline"
          android:ems="10"
          android:hint="@string/type_your_phone_number"
          android:inputType="phone"
          android:minHeight="48dp"
          android:padding="10dp"
          android:textColorHint="#757575" />

      <Button
          android:id="@+id/continueBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:backgroundTint="#2196F3"
          android:text="Continue"
          android:textColor="@color/white" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>